--- a/PerfilFront/perfil.html
+++ b/PerfilFront/perfil.html
@@ -23,6 +23,18 @@
                             <li><a href="#contacto">CONTACTO</a></li>
                         </ul>
                     </nav>
+
+                    <!-- iconos del menu -->
+                    <div id="icono-nav">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+
+                    <!-- iconos de las redes sociales -->
+                    <div class="redes">
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    </div>
                 </div>
             </header>
         </div>
