Agrego imagen de fondo en seccion inicio

--- a/PerfilFront/perfil.html
+++ b/PerfilFront/perfil.html
@@ -37,6 +37,12 @@
                     </div>
                 </div>
             </header>
+            <div class="presentacion">
+                <p class="bienvenida">Bienvenidos</p>
+                <h2>Soy <span>Brahian Díaz Llamas</span>, Desarrollador FullStack</h2>
+                <p class="descripcion">Soy un Ingeniero Mecatrónico egresado de la Universidad de Caldas con gusto por la tecnología y la programación.</p>
+                <a href="#portafolio">Ir a Portafolio</a>
+            </div>
         </div>
     </section>
     
