se agrega seccion "sobre mi"

--- a/PerfilFront/perfil.html
+++ b/PerfilFront/perfil.html
@@ -48,6 +48,21 @@
             </div>
         </div>
     </section>
+
+    <!-- sección sobre mi -->
+    <section id="sobremi">
+        <div class="contenedor-foto">
+            <img src="foto_perfil.jpg" alt="">
+        </div>
+        <div class="sobremi">
+            <p class="titulo-seccion">Sobre Mi</p>
+            <h2>Hola, soy <span>Brahian Díaz Llamas</span></h2>
+            <h3>Desarrollador FullStack</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat quia voluptatum illum ipsa totam deserunt optio explicabo veniam voluptatem, </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+            <a href="#">Descargar CV</a>
+        </div>
+    </section>
     
 </body>
 </html>
