--- a/PerfilFront/perfil.html
+++ b/PerfilFront/perfil.html
@@ -174,7 +174,7 @@
 
         <div class="skill">
             <div class="info">
-                <p><span class="lista"></span>Html y Css</p>
+                <p><span class="lista"></span>git</p>
                 <span class="porcentaje">95%</span>
             </div>
             <div class="barra">
