sección portafolio lista

--- a/PerfilFront/perfil.html
+++ b/PerfilFront/perfil.html
@@ -195,6 +195,22 @@
                     <p>Diseño Web</p>
                 </div>
             </div>
+            <div class="proyecto">
+                <div class="overlay"></div>
+                <img src="foto-proyecto2.jpg" alt="">
+                <div class="info">
+                    <h4>Descripción del Proyecto</h4>
+                    <p>Diseño Web</p>
+                </div>
+            </div>
+            <div class="proyecto">
+                <div class="overlay"></div>
+                <img src="foto-proyecto3.jpg" alt="">
+                <div class="info">
+                    <h4>Descripción del Proyecto</h4>
+                    <p>Diseño Web</p>
+                </div>
+            </div>
         </div>
     </section>
     
