--- a/PerfilFront/perfil.html
+++ b/PerfilFront/perfil.html
@@ -1,11 +1,11 @@
-<!-- https://brahian04.github.io/bootcampFullstackSP/PerfilFront/perfil.html -->
+<!-- https://brahian04.github.io/Portafolio/PerfilFront/perfil.html-->
 <!DOCTYPE html>
 <html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="estilo.css">
     <title>Mi portafolio</title>
@@ -19,24 +19,24 @@
                     <h1>/BD/</h1>
                     <nav id="nav" class="">
                         <ul id="links">
-                            <li><a href="#inicio" class="seleccionado">INICIO</a></li>
-                            <li><a href="#sobremi">SOBRE MI</a></li>
-                            <li><a href="#servicios">SERVICIOS</a></li>
-                            <li><a href="#portafolio">PORTAFOLIO</a></li>
-                            <li><a href="#contacto">CONTACTO</a></li>
+                            <li><a href="#inicio" class="seleccionado" onclick="seleccionar(this)">INICIO</a></li>
+                            <li><a href="#sobremi" onclick="seleccionar(this)">SOBRE MI</a></li>
+                            <li><a href="#servicios" onclick="seleccionar(this)">SERVICIOS</a></li>
+                            <li><a href="#portafolio" onclick="seleccionar(this)">PORTAFOLIO</a></li>
+                            <li><a href="#contacto" onclick="seleccionar(this)">CONTACTO</a></li>
                         </ul>
                     </nav>
 
                     <!-- iconos del menu -->
-                    <div id="icono-nav">
+                    <div id="icono-nav" onclick="responsiveMenu()">
                         <i class="fa-solid fa-bars"></i>
                     </div>
 
                     <!-- iconos de las redes sociales -->
                     <div class="redes">
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://twitter.com/BrahianDLL4" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/brahian-d04/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/brahian04" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
             </header>
@@ -58,8 +58,8 @@
             <p class="titulo-seccion">Sobre Mi</p>
             <h2>Hola, soy <span>Brahian Díaz Llamas</span></h2>
             <h3>Desarrollador FullStack</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat quia voluptatum illum ipsa totam deserunt optio explicabo veniam voluptatem, </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+            <p>He sido muy apasionado por la tecnología y es por esto que he realizado múltiples proyectos y prototipos electrónicos y mecatrónicos. Un gran logro es haber participado en encuentros de semilleros, así como competencia de robótica durante los primeros semetres de Ingeniería Mecatrónica.</p>
+            <p>Actualmente sigo capacitandome para obtener un perfil profesional como desarrollador FullStack, incursionando de forma autodidacta en el campo del desarrollo web y de la programación en general. </p>
             <a href="#">Descargar CV</a>
         </div>
     </section>
@@ -74,67 +74,20 @@
                 <hr>
                 <ul class="servicios-tag">
                     <li>web</li>
-                    <li>Graphic</li>
-                    <li>SEO</li>
+                    <li>front</li>
+                    <li>back</li>
                 </ul>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda expedita minus, </p>
+                <p>Diseño de sitios web funcionales y con responsive design.</p>
             </div>
             <div class="servicio">
                 <span class="icono"><i class="fa-sharp fa-solid fa-code"></i></span>
-                <h4>Diseño de sitios web</h4>
+                <h4>Desarrollo de aplicaciones</h4>
                 <hr>
                 <ul class="servicios-tag">
                     <li>web</li>
-                    <li>Graphic</li>
-                    <li>SEO</li>
+                    <li>escritorio</li>
                 </ul>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda expedita minus, </p>
-            </div>
-            <div class="servicio">
-                <span class="icono"><i class="fa-sharp fa-solid fa-code"></i></span>
-                <h4>Diseño de sitios web</h4>
-                <hr>
-                <ul class="servicios-tag">
-                    <li>web</li>
-                    <li>Graphic</li>
-                    <li>SEO</li>
-                </ul>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda expedita minus, </p>
-            </div>
-        </div>
-        <div class="fila">
-            <div class="servicio">
-                <span class="icono"><i class="fa-sharp fa-solid fa-code"></i></span>
-                <h4>Diseño de sitios web</h4>
-                <hr>
-                <ul class="servicios-tag">
-                    <li>web</li>
-                    <li>Graphic</li>
-                    <li>SEO</li>
-                </ul>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda expedita minus, </p>
-            </div>
-            <div class="servicio">
-                <span class="icono"><i class="fa-sharp fa-solid fa-code"></i></span>
-                <h4>Diseño de sitios web</h4>
-                <hr>
-                <ul class="servicios-tag">
-                    <li>web</li>
-                    <li>Graphic</li>
-                    <li>SEO</li>
-                </ul>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda expedita minus, </p>
-            </div>
-            <div class="servicio">
-                <span class="icono"><i class="fa-sharp fa-solid fa-code"></i></span>
-                <h4>Diseño de sitios web</h4>
-                <hr>
-                <ul class="servicios-tag">
-                    <li>web</li>
-                    <li>Graphic</li>
-                    <li>SEO</li>
-                </ul>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda expedita minus, </p>
+                <p>Diseño y desarrollo de aplicacines variadas.</p>
             </div>
         </div>
     </section>
@@ -145,7 +98,7 @@
         <div class="skill">
             <div class="info">
                 <p><span class="lista"></span>Html y Css</p>
-                <span class="porcentaje">95%</span>
+                <span class="porcentaje"></span>
             </div>
             <div class="barra">
                 <div id="html" class="barra-progreso1"></div>
@@ -155,7 +108,7 @@
         <div class="skill">
             <div class="info">
                 <p><span class="lista"></span>Javascript</p>
-                <span class="porcentaje">80%</span>
+                <span class="porcentaje"></span>
             </div>
             <div class="barra">
                 <div id="javascript" class="barra-progreso2"></div>
@@ -164,8 +117,8 @@
 
         <div class="skill">
             <div class="info">
-                <p><span class="lista"></span>base de Datos</p>
-                <span class="porcentaje">90%</span>
+                <p><span class="lista"></span>Bases de Datos</p>
+                <span class="porcentaje"></span>
             </div>
             <div class="barra">
                 <div id="bd" class="barra-progreso3"></div>
@@ -174,11 +127,41 @@
 
         <div class="skill">
             <div class="info">
-                <p><span class="lista"></span>git</p>
-                <span class="porcentaje">95%</span>
+                <p><span class="lista"></span>Git y GitHub</p>
+                <span class="porcentaje"></span>
             </div>
             <div class="barra">
-                <div id="html" class="barra-progreso4"></div>
+                <div id="git" class="barra-progreso4"></div>
+            </div>
+        </div>
+
+        <div class="skill">
+            <div class="info">
+                <p><span class="lista"></span>Java</p>
+                <span class="porcentaje"></span>
+            </div>
+            <div class="barra">
+                <div id="java" class="barra-progreso4"></div>
+            </div>
+        </div>
+
+        <div class="skill">
+            <div class="info">
+                <p><span class="lista"></span>Spring Boot</p>
+                <span class="porcentaje"></span>
+            </div>
+            <div class="barra">
+                <div id="spring" class="barra-progreso4"></div>
+            </div>
+        </div>
+
+        <div class="skill">
+            <div class="info">
+                <p><span class="lista"></span>Angular</p>
+                <span class="porcentaje"></span>
+            </div>
+            <div class="barra">
+                <div id="angular" class="barra-progreso4"></div>
             </div>
         </div>
     </div>
@@ -191,7 +174,7 @@
                 <div class="overlay"></div>
                 <img src="foto-proyecto1.jpg" alt="">
                 <div class="info">
-                    <h4>Descripción del Proyecto</h4>
+                    <h4>Portafolio</h4>
                     <p>Diseño Web</p>
                 </div>
             </div>
@@ -199,7 +182,7 @@
                 <div class="overlay"></div>
                 <img src="foto-proyecto2.jpg" alt="">
                 <div class="info">
-                    <h4>Descripción del Proyecto</h4>
+                    <h4>Aplicacion web de servicios financieros</h4>
                     <p>Diseño Web</p>
                 </div>
             </div>
@@ -207,14 +190,14 @@
                 <div class="overlay"></div>
                 <img src="foto-proyecto3.jpg" alt="">
                 <div class="info">
-                    <h4>Descripción del Proyecto</h4>
+                    <h4>Administrador de inventario de libros</h4>
                     <p>Diseño Web</p>
                 </div>
             </div>
         </div>
     </section>
     
-    <!-- seccion portafolio -->
+    <!-- seccion contacto -->
     <section id="contacto">
         <h3 class="titulo-seccion">Contactame ahora</h3>
         <div class="contenedor-form">
@@ -234,5 +217,16 @@
             </form>
         </div>
     </section>
+
+    <!-- seccion footer -->
+    <footer>
+        <p>Todos los derechos reservados -2022</p>
+        <div class="redes">
+            <a href="https://twitter.com/BrahianDLL4" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/brahian-d04/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/brahian04" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+        </div>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
