agregué enlace cv

--- a/PerfilFront/perfil.html
+++ b/PerfilFront/perfil.html
@@ -60,7 +60,7 @@
             <h3>Desarrollador FullStack</h3>
             <p>He sido muy apasionado por la tecnología y es por esto que he realizado múltiples proyectos y prototipos electrónicos y mecatrónicos. Un gran logro es haber participado en encuentros de semilleros, así como competencia de robótica durante los primeros semetres de Ingeniería Mecatrónica.</p>
             <p>Actualmente sigo capacitandome para obtener un perfil profesional como desarrollador FullStack, incursionando de forma autodidacta en el campo del desarrollo web y de la programación en general. </p>
-            <a href="#">Descargar CV</a>
+            <a href="https://drive.google.com/file/d/11_E2UiWEcJ8X2R5lzfgqFxcT4JsorSlh/view?usp=share_link" target="_blank" rel="noopener noreferrer">Descargar CV</a>
         </div>
     </section>
 
