--- a/PerfilFront/perfil.html
+++ b/PerfilFront/perfil.html
@@ -44,7 +44,7 @@
                 <p class="bienvenida">Bienvenidos</p>
                 <h2>Soy <span>Brahian Díaz Llamas</span>, Desarrollador FullStack</h2>
                 <p class="descripcion">Soy un Ingeniero Mecatrónico egresado de la Universidad de Caldas con gusto por la tecnología y la programación.</p>
-                <a href="#portafolio">Ir a Portafolio</a>
+                <a href="#portafolio">Ir a Proyectos</a>
             </div>
         </div>
     </section>
