--- a/PerfilFront/perfil.html
+++ b/PerfilFront/perfil.html
@@ -58,9 +58,9 @@
             <p class="titulo-seccion">Sobre Mi</p>
             <h2>Hola, soy <span>Brahian Díaz Llamas</span></h2>
             <h3>Desarrollador FullStack</h3>
-            <p>He sido muy apasionado por la tecnología y es por esto que he realizado múltiples proyectos y prototipos electrónicos y mecatrónicos. Un gran logro es haber participado en encuentros de semilleros, así como competencia de robótica durante los primeros semetres de Ingeniería Mecatrónica.</p>
-            <p>Actualmente sigo capacitandome para obtener un perfil profesional como desarrollador FullStack, incursionando de forma autodidacta en el campo del desarrollo web y de la programación en general. </p>
-            <a href="https://drive.google.com/file/d/11_E2UiWEcJ8X2R5lzfgqFxcT4JsorSlh/view?usp=share_link" target="_blank" rel="noopener noreferrer">Descargar CV</a>
+            <p>Soy un Desarrollador Fullstack con experiencia en el diseño, desarrollo y mantenimiento de aplicaciones web. He colaborado en proyectos diversos, contribuyendo a la automatización de procesos y la mejora de la eficiencia operativa.</p>
+            <p>Me destaco por mi capacidad autodidacta y mi interés constante en mantenerme actualizado en las últimas tecnologías, lo que me ha permitido adaptarme rápidamente y aportar soluciones innovadoras a los equipos en los que he trabajado.</p>
+            <a href="https://drive.google.com/file/d/1zqB96uAyUKBYaM8Eo0lV5ztoe3ZA1m6P/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Descargar CV</a>
         </div>
     </section>
 
@@ -172,7 +172,7 @@
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="foto-proyecto1.jpg" alt="">
+                <img id="imgProyecto1" src="foto-proyecto1.jpg" alt="Portafolio web" style="cursor: pointer;">
                 <div class="info">
                     <h4>Portafolio</h4>
                     <p>Diseño Web</p>
@@ -180,7 +180,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="foto-proyecto2.jpg" alt="">
+                <img id="imgProyecto2" src="foto-proyecto2.jpg" alt="Aplicacion web de servicios financieros" style="cursor: pointer;">
                 <div class="info">
                     <h4>Aplicacion web de servicios financieros</h4>
                     <p>Diseño Web</p>
@@ -188,7 +188,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="foto-proyecto3.jpg" alt="">
+                <img id="imgProyecto3" src="foto-proyecto3.jpg" alt="Administrador de inventario de libros" style="cursor: pointer;>
                 <div class="info">
                     <h4>Administrador de inventario de libros</h4>
                     <p>Diseño Web</p>
